Fix: improve multi-model coherence in text
- Generalize 'Qwen2-Audio produces' to 'target LALM (Qwen2-Audio or Qwen3-Omni) produces'
- Clarify 2×2 factorial design applies to primary Qwen2-Audio experiments
- Add explicit mention that Qwen3-Omni evaluated as frozen model for cross-model test

Lines changed:
- Line 187 (Overview): specify '2×2 for primary Qwen2' + frozen Qwen3 note
- Line 411 (Data Sources): generalize prediction-time model reference

--- a/main.tex
+++ b/main.tex
@@ -184,7 +184,7 @@ For efficient model adaptation, Low-Rank Adaptation (LoRA) \cite{hu2022lora} has
 
 We present a framework to evaluate and improve Large Audio-Language Model (LALM) performance on voice activity detection under controlled acoustic degradations. The pipeline proceeds as follows: (i) extract base clips of 1000~ms from source datasets, each labeled as SPEECH or NONSPEECH; (ii) apply a bank of 22 psychometric degradation conditions spanning segment duration, signal-to-noise ratio (SNR), reverberation, and spectral filtering; (iii) embed each degraded segment in a fixed 2000~ms container padded with low-amplitude noise; (iv) query the target LALM (Qwen2-Audio or Qwen3-Omni) with a VAD prompt asking whether the clip contains human speech; and (v) normalize the model's textual response to a SPEECH/NONSPEECH label for metric computation.
 
-This evaluation adopts a psychometric-style approach, treating accuracy as a function of each degradation parameter. By sweeping duration from 20 to 1000~ms while fixing other factors at neutral values, we trace an accuracy-versus-duration curve analogous to classical temporal integration functions. Similarly, varying SNR from $-10$ to $+20$~dB yields robustness curves. The framework is organized as a $2 \times 2$ factorial design crossing model type (Base versus LoRA-adapted) with prompt type (hand-crafted versus OPRO-optimized), enabling systematic comparison of these adaptation strategies.
+This evaluation adopts a psychometric-style approach, treating accuracy as a function of each degradation parameter. By sweeping duration from 20 to 1000~ms while fixing other factors at neutral values, we trace an accuracy-versus-duration curve analogous to classical temporal integration functions. Similarly, varying SNR from $-10$ to $+20$~dB yields robustness curves. The primary Qwen2-Audio experiments follow a $2 \times 2$ factorial design crossing model type (Base versus LoRA-adapted) with prompt type (hand-crafted versus OPRO-optimized), enabling systematic comparison of these adaptation strategies. Additionally, we evaluate a frozen Qwen3-Omni-30B model (no LoRA) under hand-crafted and OPRO-optimized prompts to test cross-model generalization.
 
 \subsection{Psychometric Degradation Bank}
 \label{subsec:degradation_bank}
@@ -408,7 +408,7 @@ For all stages of the study (LoRA fine-tuning, OPRO development, and final evalu
 
 Non-speech segments are sampled from a filtered subset of ESC-50~\cite{piczak2015esc}. We exclude 17 categories containing human or animal vocalizations: human sounds (breathing, clapping, coughing, crying\_baby, drinking\_sipping, footsteps, sneezing, snoring) and animal sounds (cat, chirping\_birds, crickets, frog, hen, insects, pig, rooster, sheep). The remaining categories provide unambiguous environmental sounds for the NONSPEECH class.
 
-All audio is resampled to 16~kHz mono and segmented into 1000~ms clips. The base clip pool is thus formed by SPEECH clips from VoxConverse that pass the post-selection SAD/VAD quality-control step described above (speech activity ratio $\geq 0.8$) and NONSPEECH clips from filtered ESC-50. From this pool, we construct all experimental splits with balanced class distributions. At prediction time, Qwen2-Audio produces a textual response; we normalize it to the binary label set \{SPEECH, NONSPEECH\} using the rule-based mapper described in Section~\ref{subsubsec:normalization}.
+All audio is resampled to 16~kHz mono and segmented into 1000~ms clips. The base clip pool is thus formed by SPEECH clips from VoxConverse that pass the post-selection SAD/VAD quality-control step described above (speech activity ratio $\geq 0.8$) and NONSPEECH clips from filtered ESC-50. From this pool, we construct all experimental splits with balanced class distributions. At prediction time, the target LALM (Qwen2-Audio or Qwen3-Omni) produces a textual response; we normalize it to the binary label set \{SPEECH, NONSPEECH\} using the rule-based mapper described in Section~\ref{subsubsec:normalization}.
 
 \subsubsection{Dataset Splits}
 \label{subsubsec:splits}
